Istio/Calculator/basicop/add/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: add
  namespace: <PROJECT>
  labels:
    app: add
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add    
  template:
    metadata:
      labels:
        app: add         
    spec:
      containers:
      - image: <CONTAINER>
        name: add-container
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-server
      imagePullSecrets:
      - name: bluemix-calculator-secret
