Istio/Calculator/basicop/add/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: add
  namespace: <PROJECT>
  labels:
    app: add
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: add
