Istio/Calculator/basicop/add/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-add
  namespace: calculator 
spec:
  podSelector:
    matchLabels:
      app: add
  ingress:
  - ports:
    - port: 80  
    from:
    - podSelector:
        matchLabels:
          purpose: curl       
    - podSelector:
        matchLabels:
          app: compositeop
    - namespaceSelector:
        matchLabels:
          purpose: istio-system
    - namespaceSelector:
        matchLabels:
          purpose: kube-system
